# fpl-optimizer

./: .gitignore  README.md  example.py  example_advanced_xp.py  pyproject.toml  requirements.txt  test_advanced_xp.py
.backtest_cache/: 2024-25_data.pkl
backtest_cache/: historical_db_gw14.pkl
backtest_results/: results.pkl
fpl_optimizer/: __init__.py  api.py  backtesting.py  data_cache.py  data_sources.py  expected_points.py  fpl_client.py  live_backtest.py  main.py  ml_predictor.py  models.py  optimizer.py  optimizer_backup.py  predictor.py  server.py  team_backtest.py
ml_models/: ml_model.pkl
scripts/: REALISTIC_BACKTEST_README.md  blend_ratio_test.py  collect_historical_data.py  compare_my_performance.py  fetch_external_data.py  fetch_historical_fixtures.py  full_backtest.py  parallel_blend_backtest.py  parallel_team_simulation.py  realistic_optimizer_backtest.py  validate_predictor.py
