[tool.poetry]
name = "fpl-optimizer"
version = "0.1.0"
description = "A Python-based optimizer for Fantasy Premier League teams"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "fpl_optimizer"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">=2.0.0"
requests = ">=2.31.0"
pulp = ">=2.7.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
fpl = "fpl_optimizer.main:main"
fpl-optimize = "fpl_optimizer.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"